--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 
 <body>
-    <header>Domine a si mesmo ou seja dominado</header>
+    <header>assista e divirtasse</header>
     <section>
         <div class="chamada-texto">
-            <h1>O que fazemos na vida ecoa na eternidade</h1>
+            <h1>filmes livres</h1>
             <p>Seja incomum entre os incomuns</p>
         </div>
 
